Return Messages Embedded In Room
