# insighthub-backend/src/controllers/rooms_controller.ts
@@ -2,11 +2,11 @@ import mongoose from "mongoose";
 import roomModel from "../models/room_model";
 
 
-const getRoomIdByUserIds = async (req, res) => {
+const getRoomByUserIds = async (req, res) => {
     const receiverUserId = req.params.receiverUserId;
     const initiatorUserId = req.query.userId;
     try {
-        let roomIdDocument: any[] = await roomModel.aggregate(
+        let roomDocument: any[] = await roomModel.aggregate(
             [
                 {
                     $match: {
@@ -16,8 +16,11 @@ const getRoomIdByUserIds = async (req, res) => {
                     }
                 },
                 {
-                    $project: {
-                        _id: 1
+                    $lookup: {
+                      from: 'messages',
+                      localField: '_id',
+                      foreignField: 'roomId',
+                      as: 'messages'
                     }
                 },
                 {
@@ -26,20 +29,19 @@ const getRoomIdByUserIds = async (req, res) => {
             ]
         );
 
-        let roomId = roomIdDocument?.length > 0 ? roomIdDocument[0]._id : null;
-        if (roomId) {
-            return res.status(200).send(roomId.toString());
+        let room = roomDocument?.length > 0 ? roomDocument[0] : null;
+        if (room) {
+            return res.status(200).send(room);
         }
 
         // Room not found, create one.
         const newRoom = await roomModel.create(
             { userIds: [new mongoose.Types.ObjectId(receiverUserId), initiatorUserId]});
-        roomId = newRoom._id;
-        return res.status(201).send(roomId.toString());
+        room = {...newRoom, messages: []};
+        return res.status(201).send(room);
     }catch(error){
         res.status(400).send("Bad Request");
     }
 };
 
-
-export default { getRoomIdByUserIds };
+export default { getRoomByUserIds };
